=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - In Development

=over

=item *

Media bulk uploads now try to guess the media_type based on the file 
extension. [Michael Peters]

=item *

Now save and display text media object (HTML, CSS, etc) with the same
encoding that we use for other text in the system. [Michael Peters]

=item *

Fixed an ISE if C<BadLoginCount> is set but no username was provided
on the login attempt. [Michael Peters]

=item *

Fixed the deprecated (but retained for backward compatibility) Krang::URL 
module's real_url() method which duplicated the code in, rather than 
simply dispatching to, its recommended successor, the 
Krang::Publisher->url_for() method.  Now url_for() can be overridden or 
extended in an addon subclass and any exisitng code still using the old 
pkg('URL')->real_url() calls will be enhanced too. [David Kaufman]

=item *

Prevent double clicks (which cause duplicate requests to the server, hidden
ISEs and session locking) by making sure that the same Ajax request doesn't
happen within 2 seconds of the last time it was requested. [Michael Peters]

=item *

Fixed bug in Krang::ElementClass's flattened-template code (introduced in v3.04) 
that was failing to distinguish the empty-string from an undefined value when 
recursively populating a template's inner loops. [Noam Weinstein]

=item *

Upgraded source modules that were throwing ISEs when trying to use
the Changeable Elements feature introduced in Krang v3.05. [Michael Peters]

=item *

Fixed bug in Story::find() that caused very slow double-join on story-category 
table. NOTE: Fix entails slight permissioning change: in the past, a user 
with may_see permissions in Category A but without them in Category B would 
only be shown stories whose PRIMARY category was A, not those whose primary 
category was B and whose SECONDARY category was A. This will no longer be